work in progress

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.diveintojee.poc.org.diveintojee.poc.ansiblecluster</groupId>
-        <artifactId>cluster-root</artifactId>
+        <groupId>org.diveintojee.poc.digitaloceancluster</groupId>
+        <artifactId>app1-root</artifactId>
         <version>0.0.2-SNAPSHOT</version>
     </parent>
-    <artifactId>cluster-app</artifactId>
-    <name>cluster-app</name>
-    <description>cluster-app</description>
+    <artifactId>app1-api</artifactId>
+    <name>app1-api</name>
+    <description>app1-api</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,8 +59,8 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.diveintojee.poc.org.diveintojee.poc.ansiblecluster</groupId>
-            <artifactId>cluster-domain</artifactId>
+            <groupId>org.diveintojee.poc.digitaloceancluster</groupId>
+            <artifactId>app1-domain</artifactId>
         </dependency>
     </dependencies>
     <build>
