--- a/api/pom.xml
+++ b/api/pom.xml
@@ -62,6 +62,10 @@
             <groupId>org.diveintojee.poc.digitaloceancluster</groupId>
             <artifactId>app1-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
