--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
 		<flyway.version>3.1</flyway.version>
 		<mysql-connector-java.version>5.1.34</mysql-connector-java.version>
 		<junit.version>4.11</junit.version>
-	</properties>
+        <logstash-logback-encoder.version>2.4</logstash-logback-encoder.version>
+    </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -145,6 +146,11 @@
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>${logstash-logback-encoder.version}</version>
+            </dependency>
 		</dependencies>
     </dependencyManagement>
     <build>
