--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,12 @@
             </dependency>
 		</dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
     <build>
         <pluginManagement>
             <plugins>
